--- a/.config/i3/config
+++ b/.config/i3/config
@@ -94,13 +94,13 @@ bindsym $mod+q focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $wallpaper /home/nrouanet/Pictures/wallpaper.png
+set $wallpaper ~/Pictures/Wallpapers/infinity-N3-HacTao.png
 
 # lock
-bindsym $mod+Shift+x exec /home/nrouanet/.config/i3/scripts/lockscreen $wallpaper
+bindsym $mod+Shift+x exec ~/.config/i3/scripts/lockscreen $wallpaper
 
 set $workspace1 "1 "
-set $workspace2 "2"
+set $workspace2 "2 "
 set $workspace3 "3 "
 set $workspace4 "4 "
 set $workspace5 "5"
@@ -176,7 +176,7 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 # exit i3
-bindsym $mod+Shift+e exec /home/nrouanet/.config/i3/scripts/exit_menu
+bindsym $mod+Shift+e exec ~/.config/i3/scripts/exit_menu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -221,7 +221,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 # finds out, if available)
 bar {
         #status_command i3status
-        status_command i3blocks -c /home/nrouanet/.config/i3/i3blocks.conf
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf
         tray_output primary
 	font pango:System San Francisco Display, FontAwesome 10
 	colors {
