i3blocks: Little tuning

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,4 +1,5 @@
 command=/usr/share/i3blocks/$BLOCK_NAME
+separator_block_width=15
 color=#E0E0E0
 
 [song]
@@ -7,14 +8,6 @@ label=
 interval=1
 color=#2ebd59
 
-[load_average]
-interval=1
-label=
-
-[disk]
-interval=1
-label=
-
 [volume]
 # pactl list sinks
 # /etc/pulse/default.pa: Add at the end:
@@ -22,6 +15,41 @@ label=
 command=/home/nrouanet/.config/i3/scripts/volume
 label=
 interval=1
+
+#[load_average]
+#interval=1
+#label=
+
+[cpu_label]
+full_text=CPU
+separator=false
+separator_block_width=0
+
+[cpu_usage]
+interval=1
+min_width= 10.00%
+align=right
+
+[memory]
+label=
+separator=false
+interval=30
+separator_block_width=10
+
+[memory]
+label=SWAP
+instance=swap
+separator=false
+interval=30
+separator_block_width=10
+
+[disk]
+interval=30
+label=
+
+[bandwidth]
+interval=5
+label=
 
 [date]
 command=LC_TIME=fr_FR.UTF-8 date '+%d %b %Y %H:%M:%S'
