--- a/.config/i3/config
+++ b/.config/i3/config
@@ -252,3 +252,8 @@ exec --no-startup-id compton
 bindsym $mod+F1 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
 bindsym $mod+F2 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 bindsym $mod+F3 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+
+# Volume key bindings
+bindsym $mod+F10 exec ~/.config/i3/scripts/volume mute
+bindsym $mod+F11 exec ~/.config/i3/scripts/volume down
+bindsym $mod+F12 exec ~/.config/i3/scripts/volume up
