i3blocks: CPU block tuning

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -21,9 +21,9 @@ interval=1
 #label=
 
 [cpu_label]
-full_text=CPU
+full_text=
 separator=false
-separator_block_width=0
+separator_block_width=2
 
 [cpu_usage]
 interval=1
