--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,6 +35,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec terminator -e "cd `xcwd` && /bin/zsh"
 
 # kill focused window
 bindsym $mod+Shift+a kill
