i3blocks: Add a battery status script

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -54,3 +54,8 @@ label=
 command=LC_TIME=fr_FR.UTF-8 date '+%d %b %Y %H:%M:%S'
 interval=1
 label=
+
+[battery]
+command=~/.config/i3/scripts/battery
+interval=10
+separator=false
