--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -47,8 +47,8 @@ interval=30
 label=
 
 [bandwidth]
-interval=5
-label=
+interval=1
+command=/bin/bash -c "/usr/share/i3blocks/bandwidth | /bin/sed -e 's/IN/\xef\x84\x87/;s/OUT/\xef\x84\x86/'"
 
 [date]
 command=LC_TIME=fr_FR.UTF-8 date '+%d %b %Y %H:%M:%S'
