fonts: Add Nerd Font

--- a/.config/fontconfig/conf.d/10-symbols.conf
+++ b/.config/fontconfig/conf.d/10-symbols.conf
@@ -27,6 +27,7 @@ to be looked into when a glyph is not found in a specic font
       <family>FontAwesome</family>
       <family>Octicons</family>
       <family>Icomoon</family>
+      <family>Anonymice Nerd Font</family>
     </prefer>
   </alias>
 </fontconfig>
