Add a few rules to .gitignore
* Python byte-compiled files
* Rope project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Rope project settings
+.ropeproject
+
+# Vim
 *.swp
 .netrwhist
