switch_docking: Allow custom screens sizes in .config/screens

--- a/.config/screens.example
+++ b/.config/screens.example
@@ -1,3 +1,4 @@
 # Setup your screen order preference from left to right
 # Check xrandr output to get the screen names
 SCREENS_ORDER=( "HDMI-1" "HDMI-2" )
+SCREENS_SIZES=( "1920x1080" "2560x1440" )
