--- a/.config/i3/config
+++ b/.config/i3/config
@@ -173,6 +173,12 @@ workspace $workspace1 output eDP-1
 workspace $workspace2 output eDP-1
 workspace $workspace3 output DP-2
 workspace $workspace4 output DP-2
+workspace $workspace5 output DP-2
+workspace $workspace6 output DP-2
+workspace $workspace7 output DP-2
+workspace $workspace8 output DP-1-1
+workspace $workspace9 output DP-1-1
+workspace $workspace10 output DP-1-1
 workspace $workspace11 output DP-1-1
 workspace $workspace12 output DP-1-1
 
