--- a/.config/i3/config
+++ b/.config/i3/config
@@ -111,7 +111,7 @@ set $workspace7 "7"
 set $workspace8 "8"
 set $workspace9 "9"
 set $workspace10 "10"
-set $workspace11 "11"
+set $workspace11 "11 "
 set $workspace12 "12 "
 
 # switch to workspace
