fontconfig: Update monospace overrides

--- a/.config/fontconfig/conf.d/20-menlo.conf
+++ b/.config/fontconfig/conf.d/20-menlo.conf
@@ -21,12 +21,8 @@ to be looked into when a glyph is not found in a specic font
 
 <fontconfig>
   <alias>
-    <family>MonoSpace</family>
+    <family>Menlo</family>
     <prefer>
-      <family>Pomodoro</family>
-      <family>FontAwesome</family>
-      <family>Octicons</family>
-      <family>Icomoon</family>
       <family>DejaVu Sans Mono</family>
       <family>Anonymice Nerd Font</family>
     </prefer>
