--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,10 +1,9 @@
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=~/.config/i3/scripts/$BLOCK_NAME
 separator_block_width=15
 color=#E0E0E0
 
-[song]
-command=~/.config/i3/scripts/spotify
-label=
+[spotify]
+label= 
 interval=1
 color=#2ebd59
 
@@ -12,7 +11,6 @@ color=#2ebd59
 # pactl list sinks
 # /etc/pulse/default.pa: Add at the end:
 # set-card-profile 0 	output:analog-stereo
-command=~/.config/i3/scripts/volume
 interval=1
 
 #[load_average]
@@ -30,32 +28,40 @@ min_width= 10.00%
 align=right
 
 [memory]
-label=
+label= 
 separator=false
 interval=30
-separator_block_width=10
+separator_block_width=5
 
-[memory]
-label=SWAP
-instance=swap
-separator=false
-interval=30
-separator_block_width=10
+#[memory]
+#label=SWAP
+#instance=swap
+#separator=false
+#interval=30
+#separator_block_width=10
 
 [disk]
+label= 
 interval=30
-label=
 
 [bandwidth]
 interval=1
-command=/bin/bash -c "/usr/lib/i3blocks/bandwidth | /bin/sed -e 's/IN/\xef\x84\x87/;s/OUT/\xef\x84\x86/'"
+command=~/.config/i3/scripts/$BLOCK_NAME --inlabel " " --outlabel " "
+
+[nm-vpn]
+interval=60
 
 [date]
-command=LC_TIME=fr_FR.UTF-8 date '+%d %b %Y %H:%M:%S'
+label= 
+command=LC_TIME=fr_FR.UTF-8 date '+%d %b %Y(%V)  %H:%M:%S'
 interval=1
-label=
+separator=false
+separator_block_width=2
+
+[weather]
+command=curl -s "wttr.in/?format=%c%20%t%o"
+interval=1800
 
 [battery]
-command=~/.config/i3/scripts/battery
 interval=10
 separator=false
