--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,7 +35,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+Return exec terminator -e "cd `xcwd` && /bin/zsh"
+bindsym $mod+Shift+Return exec ~/.config/i3/scripts/i3_shell.sh
 
 # kill focused window
 bindsym $mod+Shift+a kill
