i3: Add a shortcut to move workspace
And disable j, k, l, m shortcuts

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -46,10 +46,10 @@ bindsym $mod+Shift+a kill
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+m focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+m focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -58,10 +58,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+m move right
+#bindsym $mod+Shift+j move left
+#bindsym $mod+Shift+k move down
+#bindsym $mod+Shift+l move up
+#bindsym $mod+Shift+m move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -141,6 +141,9 @@ bindsym $mod+Shift+ccedilla move container to workspace $workspace9
 bindsym $mod+Shift+agrave move container to workspace $workspace10
 bindsym $mod+Shift+parenright move container to workspace $workspace11
 bindsym $mod+Shift+equal move container to workspace $workspace12
+
+# Move current workspace to next output on the right
+bindsym $mod+m move workspace to output right
 
 # Floating windows
 # Eye of Gnome(image viewer)
