monitor_partitions: rework alerting
Email alerts will be sent only once in a given interval (24 hours by
default) if the status does not change during that interval.

--- a/.config/partitions_monitor.example
+++ b/.config/partitions_monitor.example
@@ -1,3 +1,9 @@
 PARTITIONS=( "/" "/var" )
 MAILTO=me@example.com
-#THRESHOLD=80
+# Disk usage percent
+#THRESHOLD=90
+# Disk inodes percent
+#ITHRESHOLD=90
+# Time interval between two identical alerts in seconds
+# 86400 seconds = 24 hours
+#INTERVAL=86400
