i3: Remove separator between CPU and memory

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -26,6 +26,8 @@ separator_block_width=2
 interval=1
 min_width= 10.00%
 align=right
+separator=false
+separator_block_width=5
 
 [memory]
 label= 
