--- a/.config/i3/config
+++ b/.config/i3/config
@@ -142,8 +142,8 @@ bindsym $mod+Shift+agrave move container to workspace $workspace10
 bindsym $mod+Shift+parenright move container to workspace $workspace11
 bindsym $mod+Shift+equal move container to workspace $workspace12
 
-# Move current workspace to next output on the right
-bindsym $mod+m move workspace to output right
+# Move current workspace to next output
+bindsym $mod+m move workspace to output next
 
 # Floating windows
 # Gnome Calculator
