i3: Move volume info next to battery

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -7,12 +7,6 @@ label=
 interval=1
 color=#2ebd59
 
-[volume]
-# pactl list sinks
-# /etc/pulse/default.pa: Add at the end:
-# set-card-profile 0 	output:analog-stereo
-interval=1
-
 #[load_average]
 #interval=1
 #label=
@@ -66,6 +60,15 @@ interval=1800
 [battery]
 interval=10
 separator=false
+separator_block_width=5
+
+[volume]
+# pactl list sinks
+# /etc/pulse/default.pa: Add at the end:
+# set-card-profile 0 	output:analog-stereo
+interval=1
+separator=false
+separator_block_width=5
 
 [notifications]
 interval=30
