--- a/.config/i3/config
+++ b/.config/i3/config
@@ -247,14 +247,20 @@ bindsym Control+Shift+space exec dunstctl close-all
 bindsym Control+ampersand exec dunstctl history-pop
 
 # Spotify key bindings
-bindsym $mod+F1 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
-bindsym $mod+F2 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
-bindsym $mod+F3 exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+bindsym XF86AudioPlay exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+bindsym $mod+F1 exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+bindsym XF86AudioPrev exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+bindsym $mod+F2 exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+bindsym XF86AudioNext exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+bindsym $mod+F3 exec --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
 
 # Volume key bindings
-bindsym $mod+F10 exec ~/.config/i3/scripts/volume mute
-bindsym $mod+F11 exec ~/.config/i3/scripts/volume down
-bindsym $mod+F12 exec ~/.config/i3/scripts/volume up
+bindsym XF86AudioMute exec --no-startup-id ~/.config/i3/scripts/volume mute
+bindsym $mod+F10 exec --no-startup-id ~/.config/i3/scripts/volume mute
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/i3/scripts/volume down
+bindsym $mod+F11 exec --no-startup-id ~/.config/i3/scripts/volume down
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.config/i3/scripts/volume up
+bindsym $mod+F12 exec --no-startup-id ~/.config/i3/scripts/volume up
 
 # Backlight key bindings
 bindsym XF86MonBrightnessUp exec ~/.config/i3/scripts/backlight +
