--- a/.config/fontconfig/conf.d/10-symbols.conf
+++ b/.config/fontconfig/conf.d/10-symbols.conf
@@ -23,11 +23,9 @@ to be looked into when a glyph is not found in a specic font
   <alias>
     <family>MonoSpace</family>
     <prefer>
-      <family>Pomodoro</family>
-      <family>FontAwesome</family>
-      <family>Octicons</family>
-      <family>Icomoon</family>
-      <family>DejaVu Sans Mono</family>
+      <family>Font Awesome 6 Free</family>
+      <family>Font Awesome 6 Brands</family>
+      <family>Font Awesome v4 Compatibility</family>
     </prefer>
   </alias>
 </fontconfig>
