i3: add microphone status script

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -70,5 +70,10 @@ interval=1
 separator=false
 separator_block_width=5
 
+[microphone]
+interval=1
+separator=false
+separator_block_width=5
+
 [notifications]
 interval=10
